# AlteredAudio

./: .gitignore  AlteredAudio.filtergraph  CMakeLists.txt  ui-design-todo.md  vst-engine-roadmap.md
.claude/: settings.json
Filter 76/Presets/: NINO TEST.f76preset
Filter76/: README.md
Gain76/: CMakeLists.txt  README.md  SESSION_HANDOFF.md
Gain76/Source/: AlteredAudioLookAndFeel.h  GainEditor.cpp  GainEditor.h  GainProcessor.cpp  PluginEditor.h
TEMP/BUGS/: comp76-independent-setup.md  filter76-independent-setup.md  gain76-independent-setup.md
TEMP/Design_Test/: CLAUDE_CODE_INSTRUCTIONS.md  MASTER_JUCE_SPEC.md  PluginEditor.h  PluginProcessor_additions.cpp
TEMP/EQ_MD/: 8band-classA-eq-topology.md
TEMP/Inspiration/: eq-vst-feature-reference.md
TEMP/Wear and tear alpha/: CLAUDE_CODE_wear_overlay.md
design-system/: HANDOFF.md  README.md  SKILL.md  styles.css
design-system/components/controls/: Button.d.ts  Button.jsx  Button.prompt.md  Knob.d.ts  Knob.jsx  Knob.prompt.md  Select.d.ts  Select.jsx  Select.prompt.md  ToggleSwitch.d.ts  ToggleSwitch.jsx  ToggleSwitch.prompt.md  controls.card.html
design-system/components/displays/: CRTDisplay.d.ts  CRTDisplay.jsx  CRTDisplay.prompt.md  EQCurve.d.ts  EQCurve.jsx  EQCurve.prompt.md  Meter.d.ts  Meter.jsx  Meter.prompt.md  ModMatrix.d.ts  ModMatrix.jsx  ModMatrix.prompt.md  displays.card.html  graphs.card.html
design-system/components/surfaces/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  ModuleTile.d.ts  ModuleTile.jsx  ModuleTile.prompt.md  surfaces.card.html
design-system/guidelines/: brand-selected.card.html  brand-wordmark.card.html  colors-accent.card.html  colors-neutral.card.html  colors-text.card.html  spacing-layout.card.html  spacing-radii.card.html  spacing-scale.card.html  type-body.card.html  type-display.card.html  type-labels.card.html
design-system/tokens/: base.css  colors.css  effects.css  spacing.css  typography.css
design-system/ui_kits/mastering/: README.md  index.html
design-system/ui_kits/plugin/: README.md  index.html
docs/: SESSION-LOG-2026-06-11.md  SESSION-LOG-2026-06-12-PM.md  SESSION-LOG-2026-06-12.md
filter76-design/: SKILL.md  SYNC-NOTES.md  readme.md  styles.css
filter76-design/components/controls/: Button.jsx  Button.prompt.md  Knob.jsx  OptionList.jsx  OptionList.prompt.md  PowerButton.jsx  PowerButton.prompt.md  Readout.jsx  SegmentedControl.jsx  Select.jsx
filter76-design/components/displays/: Meter.jsx  Meter.prompt.md  Oscilloscope.jsx  Oscilloscope.prompt.md  SpectrumDisplay.jsx  SpectrumDisplay.prompt.md
filter76-design/components/surfaces/: Badge.jsx  LED.jsx  LED.prompt.md  Panel.jsx
filter76-design/tokens/: base.css  effects.css
filter76-design/ui_kits/gain/: App.jsx  index.html
filter76-design/ui_kits/plugin/: App.jsx  BottomRow.jsx  DisplayRow.jsx  FilterRow.jsx  Footer.jsx  Header.jsx  data.js  index.html
gain/: CMakeLists.txt
gain76-design/: SKILL.md  SYNC-NOTES.md  readme.md
gain76-design/components/controls/: Knob.prompt.md  Readout.prompt.md  SegmentedControl.prompt.md  Select.prompt.md
gain76-design/components/displays/: PeakMeter.prompt.md
gain76-design/components/surfaces/: Badge.prompt.md  Panel.prompt.md
gain76-design/tokens/: colors.css  effects.css  fonts.css  spacing.css  typography.css
gain76-design/ui_kits/gain/: gain-app.jsx  index.html
source/: AaLookAndFeel.h  BiquadFilter.cpp  BiquadFilter.h  CRTDisplay.cpp  CRTDisplay.h  ChainStrip.cpp  ChainStrip.h  ChorusModule.cpp  ChorusModule.h  ClipperModule.cpp  ClipperModule.h  CompressorModule.cpp  CompressorModule.h  DelayModule.cpp  DelayModule.h  EQModule.cpp  EQModule.h  EffectModule.h  EnvelopeFollower.cpp  EnvelopeFollower.h  FilterModule.cpp  FilterModule.h  FlangerModule.cpp  FlangerModule.h  GainModule.cpp  GainModule.h  GateModule.cpp  GateModule.h  LFOEngine.cpp  LFOEngine.h  LimiterModule.cpp  LimiterModule.h  ModulationMatrix.cpp  ModulationMatrix.h  ModuleChain.cpp  ModuleChain.h  ModulePanels.cpp  ModulePanels.h  ModuleTileList.cpp  ModuleTileList.h  (+19 more)
source/plugins/: AuroraFilterEditor.cpp  AuroraFilterEditor.h  ChorusPlugin.cpp  ClipperPlugin.cpp  CompressorPlugin.cpp  DelayPlugin.cpp  EQPlugin.cpp  FilterPlugin.cpp  FlangerPlugin.cpp  GainEditor.cpp  GainEditor.h  GainPlugin.cpp  GatePlugin.cpp  LimiterPlugin.cpp  PhaserPlugin.cpp  ReverbPlugin.cpp  SpatialPlugin.cpp  TransientShaperPlugin.cpp  WaveshaperPlugin.cpp
tools/: LatencyTester.cpp  install-vst3.ps1
